--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
-p {
-  font-family: Lato;
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table th,
+table td {
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
 }
